# hazir_ws

./: README.md
src/: zu.py
src/environment/: package.xml
src/environment/worlds/: aiset_map.world  aiset_map_update.world  kaira_map.world  pist_deneme.world  road.world  yarisma_update.world
src/hazir/: CMakeLists.txt  package.xml
src/hazir/config/: ackermann_params.yaml  joint_params.yaml
src/hazir/launch/: deneme.launch  hazir_description.launch
src/hazir/meshes/: tekerlers3.dae
src/hazir/rviz/: config.rviz
src/hazir/urdf/: deneme.xacro  main.xacro  t_car_2.urdf
src/t_car/: CMakeLists.txt  jant.STL  package.xml  teker.STL  untitled.dae  untitled2.dae
src/t_car/config/: cfg.rviz
src/t_car/launch/: display.launch  gazebo.launch
src/t_car/meshes/: sag_on.STL  sol_arka.STL  sol_on.STL  tekerlers.dae  tekerlers2.dae  tekerlers3.dae  tekerlers4.dae  tekerlersssss.dae
src/t_car/urdf/: t_car.csv  t_car.urdf
src/t_car_2/: CMakeLists.txt  package.xml
src/t_car_2/config/: joint_names_T-Car-2.yaml
src/t_car_2/launch/: display.launch  gazebo.launch
src/t_car_2/meshes/: sag_arka.STL
src/t_car_2/urdf/: t_car_2.csv  t_car_2.urdf
